Fix initial GT logo visibility, hide clusters until user interaction. function setLayerVisibility,refactor sourcedata that prevents clusters from appearing during the initial rotation

--- a/styles.css
+++ b/styles.css
@@ -478,7 +478,7 @@ button:hover {
     padding: 10px;
     /* transition: width 0.3s, max-height 0.3s; */
 
-    background-color: rgba(15, 40, 68, 0.9); /* Add background color to identify state */
+    background-color: rgba(15, 40, 68, 0.9); 
 }
 
 #hospital-list-sidebar.collapsed h2,
@@ -559,7 +559,6 @@ hospital-list-sidebar.collapsed #close-sidebar {
 .theme-toggle-btn,
 .round-button {
     outline: none;
-    /* tabindex: 0; */
 }
 
 /* 
@@ -592,26 +591,44 @@ hospital-list-sidebar.collapsed #close-sidebar {
         border: 0.5px solid #ff8502;
     } */
 
-
+/* Keyframes for bounce and rotation animation */
+/* @keyframes bounceAndRotate {
+    0% {
+        transform: translateY(0) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-3px) rotate(15deg); 
+    }
+    100% {
+        transform: translateY(0) rotate(0deg);
+    }
+} */
 
 /* General Styling for the Logo Element */
 .company-logo {
-    width: 40px;      
-    height: 30px;
-    background-size: 50%;  
+    width: 30px;      
+    height: 40px;
+    background-size: 70%;  
     /* background-size: contain; */
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
-    transform: rotate(0deg); /* Initial state without rotation */
+    transform: rotate(0deg); 
     /* transform: rotate(-45deg); */
-    /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.4); */
+    /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15); */
+    /* box-shadow: 0px 5px 4px #07b8fa;  */
     transition: visibility 0.3s ease, transform 1s linear;
     visibility: hidden;
     background-image: url('./img/gtLogo.png');
     position: relative;
-    margin-top: -20px;
+    margin-top: -25px;
     z-index: 10;
+
+    /* Set transform-origin to avoid moving away from its position */
+    /* transform-origin: center bottom; */
+    
+    /* Apply the animation */
+    /* animation: bounceAndRotate 1.5s ease-in-out infinite; */
 }
 
 .company-logo:hover {
